Fix for bug 72810 (count() function is unable to handle certain path expressions). r=sicking, sr=jst, a=roc.