extensions/transformiix/source/xslt/XSLTProcessor.h
@@ -62,7 +62,7 @@
 /**
  * A class for Processing XSL Stylesheets
  * @author <a href="mailto:kvisco@ziplink.net">Keith Visco</a>
- * @version $Revision: 1.21 $ $Date: 2001/06/15 11:12:18 $
+ * @version $Revision: 1.22 $ $Date: 2001/06/20 06:46:12 $
 **/
 class XSLTProcessor
 #ifndef TX_EXE
@@ -337,8 +337,8 @@ private:
     void processTemplate(Node* node, Node* xslTemplate, ProcessorState* ps, NamedMap* actualParams = NULL);
     void processTemplateParams(Node* xslTemplate, Node* context, ProcessorState* ps, NamedMap* actualParams);
 
-    void processTopLevel(Document* xslDocument, ProcessorState* ps);
-    void processTopLevel(Element* stylesheet, ProcessorState* ps);
+    void processTopLevel(Document* aSource, Document* aStylesheet, ProcessorState* aPs);
+    void processTopLevel(Document* aSource, Element* aStylesheet, ProcessorState* aPs);
 
     ExprResult* processVariable(Node* node, Element* xslVariable, ProcessorState* ps);
 
